using System.Windows;

namespace KR2;

public partial class ReportsWindow : Window
{
    public ReportsWindow()
    {
        InitializeComponent();
    }
}
